hope this the proper fix for the nav bar and css file

--- a/clue_page.html
+++ b/clue_page.html
@@ -32,10 +32,9 @@
   <!-- Navigation bar -->
   <nav>
       <div class="topnav">
-          <a class="active" href="index.html">Game Mode</a>
-          <a href="new_game.html">New Game</a>
-          <a href="clue_page.html">Clue</a>
-          <a href="login.html">Login</a>
+          <a class="active" href="index.html">Enter Code</a>
+          <a href="dashboard.html">Dashboard</a>
+          <a class="login_logout" href="login.html">Login</a>
         </div>
   </nav>
 
@@ -83,9 +82,18 @@
   </div>
   <div class="container">
     <div id="clue_text" class="col-sm-6">
-
-
     </div>
+    <script>
+    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+    </script>
 </body>
 
 </html>
