--- a/tracking_page.html
+++ b/tracking_page.html
@@ -27,10 +27,12 @@
     <!--/______________________________________________________Navigation bar __________________________________________________________________ / -->
     <nav>
         <div class="topnav">
-            <a class="active" href="index.html">Game Mode</a>
-            <a href="new_game.html">New Game</a>
-            <a href="clue_page.html">Clue</a>
-            <a href="login.html">Login</a>
+            <a class="active" href="index.html">Enter Code</a>
+            <a href="dashboard.html">Dashboard</a>
+            <a class="login_logout" href="login.html">Login</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
         </div>
     </nav>
     <!-- /_______________________________________________________________Main________________________________________________________________/ -->
@@ -116,6 +118,17 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script>
+    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
     </script>
 </body>
 
