--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     <!-- Navigation bar -->
     <nav >
         <div class="topnav">
-            <a class="active" href="index.html">Game Mode</a>
-            <a href="new_game.html">New Game</a>
-            <a href="clue_page.html">Clue</a>
-            <a href="login.html">Login</a>
+                <a class="active" href="index.html">Enter Code</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a class="login_logout" href="login.html">Login</a>
           </div>
     </nav>
 
@@ -95,7 +94,17 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+<script>
+/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
 </body>
 
 </html>
