added edit_game.html and editGame.js with related code that doesn't yet work

--- a/edit_game.html
+++ b/edit_game.html
@@ -25,6 +25,7 @@
     <script src="assets/javascript/authTrack.js"></script>
     <script src="assets/javascript/dbControll.js"></script>
     <script src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/editGame.js"></script>
     <!--Start Page Test-->
     <script>
     </script>
