--- a/tracking_page.html
+++ b/tracking_page.html
@@ -52,7 +52,7 @@
 
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tracking-display-table">
                 <tr>
                     <th scope="row">1</th>
                     <td>Mark</td>
