--- a/clue_page.html
+++ b/clue_page.html
@@ -42,9 +42,7 @@
     <h1 class="display-4">Clue Page!</h1>
     <p class="lead">Here we'll have some Clue information.</p>
     <hr class="my-4">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt aspernatur, velit excepturi asperiores itaque
-      molestias hic accusantium. Vero repellat, voluptatibus eius ipsam officiis obcaecati. Architecto alias maiores
-      corrupti neque dicta..</p>
+    <p>Your next clue is: </p>
       <!--Grid row-->
       <div class="row">
         <!-- This is the div id that will contain the rendered data from clue_page.js logic -->
@@ -52,32 +50,6 @@
 
         <!--Grid column-->
         <div class="col-md-6 mb-4">
-
-          <!--Card-->
-          <div class="card card-cascade narrower">
-
-            <!--Card image-->
-            <div class="view view-cascade gradient-card-header blue-gradient">
-              <h5 class="mb-0">Clue map</h5>
-            </div>
-            <!--/Card image-->
-
-            <!--Card content-->
-            <div class="card-body card-body-cascade text-center">
-
-              <!--Google map-->
-              <div id="map-container-google-8" class="z-depth-1-half map-container-5" style="height: 300px">
-                <iframe src="https://maps.google.com/maps?q=Barcelona&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                  frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
-
-            </div>
-            <!--/.Card content-->
-
-          </div>
-          <!--/.Card-->
-
-        </div>
 
       </div>
     <a class="btn btn-primary btn-lg" href="#" role="button">Found new Clue</a>
