Added a print button

--- a/edit_game.html
+++ b/edit_game.html
@@ -65,6 +65,7 @@
                         <br>
                         <button type="submit" class="btn btn-danger" id="edit-new-game">Edit</button>
                         <button type="submit" class="btn btn-warning" id="submit-game-edit">Submit Edits</button>
+                        <button type="submit" class="btn btn-success" id="print-game">Print Game</button>
                         <br>
                         <div class="images"></div>
                     </div>
