blue button on create new game dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,7 @@
                             </table>
 
                             <!-- Buttons -->
-                            <input type="button" onclick="location.href='new_game.html'; " value="Create New Game"
+                            <input class="btn btn-primary btn-lg" type="button" onclick="location.href='new_game.html'; " value="Create New Game"
                                 value="Create New Clue Hunt">
                             </form>
                         </div>
