--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
                     <div class="row">
                         <div class="col">
                             <h4>Saved Clue Hunts</h4>
-                            <table>
+                            <table class="table-striped">
                                 <thead>
                                     <tr>
                                         <th></th>
