Added claim clue button to page.

--- a/clue_page.html
+++ b/clue_page.html
@@ -51,8 +51,13 @@
 
         <!-- Clue text will be rendered in this paragraph tag -->
         <p id="renderArea"></p>
-        
+
+        <!-- This button should update the database with the clue claim if the user is already logged in. -->
+        <!-- If the user is not logged in, then it should send them to the login page, with a refer link to send them back when logged in. -->
+        <!-- The button should also disappear and be replaced by some text after the claim is successfully made. -->
+        <button id="claim-clue" class="btn btn-success btn-lg" href="#" role="button">Claim Clue</button>
         <a class="btn btn-primary btn-lg" href="index.html" role="button">Found new Clue</a>
+
       </div>
     </div>
   </div>
